--- a/image_shower/bo'yoq.css
+++ b/image_shower/bo'yoq.css
@@ -6,5 +6,10 @@
 
 .image{
     max-width: 800px;
-    
+    margin: 50px auto;
+    padding: 20px;
+    background-color: blue;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    text-align: center;
 }
