--- a/image_shower/bo'yoq.css
+++ b/image_shower/bo'yoq.css
@@ -13,3 +13,16 @@
     border-radius: 8px;
     text-align: center;
 }
+
+h1{
+    color: green;
+}
+
+input[type="text"]{
+    width: 88px;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid yellow;
+    border-radius: 4px;
+    font-size: 16px;
+}
