--- a/image_shower/bo'yoq.css
+++ b/image_shower/bo'yoq.css
@@ -8,7 +8,7 @@
     max-width: 800px;
     margin: 50px auto;
     padding: 20px;
-    background-color: blue;
+    background-color: rgb(175, 175, 214);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     text-align: center;
@@ -30,7 +30,7 @@ input[type="text"]{
 button{
     padding: 10px 20px;
     font-size: 16px;
-    color: whitesmoke;
+    color: rgb(16, 90, 14);
     background-color: lightblue;
     border: none;
     border-radius: 4px;
@@ -38,8 +38,36 @@ button{
     transition: background-color 0.3;
 }
 button:hover{
-background-color: rgb(126, 126, 208);
+    color: whitesmoke;
+background-color: rgb(18, 18, 97);
 }
 #image{
     margin-top: 30px;
+}
+
+.image-wrapper{
+    margin-bottom: 30px;
+    padding: 20px;
+    border: 1px solid #b55f5f;
+    border-radius: 4px;
+    background-color: #d5b785;
+}
+
+.displayer-image{
+    max-width: 100%;
+    height: auto;
+    border-radius: 4px;
+}
+
+.download-link{
+    display: block;
+    margin-top: 10px;
+    font-size: 14px;
+    color: #09315c;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.download-link:hover{
+    color: #0e3c6e;
 }
